fix: flicker when opening sidebar-box

--- a/src/fs_sidebar.css
+++ b/src/fs_sidebar.css
@@ -1,4 +1,4 @@
-body, #browser {
+#browser {
     background: var(--sidebar-background) !important;
 }
 
